src/objects/Quote/fields/Quote_Status_Approval_Pending_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Status_Approval_Pending_Date__c</fullName>
    <label>Quote Status Approval Pending Date</label>
    <type>DateTime</type>
</CustomField>