src/objects/Quote/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <formula>IF(CreatedBy.Profile.Name = &quot;Finisar Partner Community User&quot;, &quot;FIN REP Quote&quot;, &quot;FIN RSM Quote&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Type</label>
    <type>Text</type>
</CustomField>