src/objects/Quote/fields/QuoteCreatorProfile__c.field-meta.xml
<CustomField>
    <fullName>QuoteCreatorProfile__c</fullName>
    <formula>CreatedBy.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuoteCreatorProfile</label>
    <type>Text</type>
</CustomField>