src/objects/Quote/fields/QuoteCreatorRole__c.field-meta.xml
<CustomField>
    <fullName>QuoteCreatorRole__c</fullName>
    <formula>CreatedBy.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuoteCreatorRole</label>
    <type>Text</type>
</CustomField>