src/objects/Quote/fields/QuoteNumber__c.field-meta.xml
<CustomField>
    <fullName>QuoteNumber__c</fullName>
    <inlineHelpText>Invoice IT Quote Number</inlineHelpText>
    <label>Legacy Quote Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>