src/objects/Quote/fields/REACH__c.field-meta.xml
<CustomField>
    <fullName>REACH__c</fullName>
    <formula>IF( ISBLANK( Opportunity.Id  ) ,&apos; &apos;, TEXT(Opportunity.REACH__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>REACH</label>
    <type>Text</type>
</CustomField>