src/objects/Quote/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price Request Only</fullName>
            </value>
            <value>
                <fullName>Concept Viability Study Only</fullName>
            </value>
            <value>
                <fullName>Uncompetitive Pricing</fullName>
            </value>
            <value>
                <fullName>Unable to meet Technical Specification</fullName>
            </value>
            <value>
                <fullName>Alternative Technology Chosen</fullName>
            </value>
            <value>
                <fullName>Part not available (NPI)</fullName>
            </value>
            <value>
                <fullName>Long Lead Time</fullName>
            </value>
            <value>
                <fullName>Project Cancelled by Customer</fullName>
            </value>
            <value>
                <fullName>Project lost by customer</fullName>
            </value>
            <value>
                <fullName>Product Cancelled by II-VI</fullName>
            </value>
            <value>
                <fullName>No evidence of active support of customer ??</fullName>
            </value>
            <value>
                <fullName>Customer demand changed</fullName>
            </value>
            <value>
                <fullName>Customer decided on using a different II-VI PN</fullName>
            </value>
            <value>
                <fullName>Customer did not accept T&apos;s &amp; C&apos;s</fullName>
            </value>
            <value>
                <fullName>Bought from OEM</fullName>
            </value>
            <value>
                <fullName>Bought from competitor (Price)</fullName>
            </value>
            <value>
                <fullName>Bought from competitor (technical)</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Entry Error</fullName>
            </value>
            <value>
                <fullName>Transferred to distributor</fullName>
            </value>
            <value>
                <fullName>Disti was Promoting Competitive solution (for Design Reg)</fullName>
            </value>
            <value>
                <fullName>Disti’s end Customer preferences change (for Design Reg)</fullName>
            </value>
            <value>
                <fullName>Disti’s Lack of inventory and pipeline (for Design Reg)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>