src/objects/Quote/fields/reprocessing__c.field-meta.xml
<CustomField>
    <fullName>reprocessing__c</fullName>
    <label>reprocessing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>