src/objects/Quote/fields/RFQ__c.field-meta.xml
<CustomField>
    <fullName>RFQ__c</fullName>
    <description>Request for Quote#</description>
    <inlineHelpText>Source of request</inlineHelpText>
    <label>RFQ#</label>
    <length>100</length>
    <type>Text</type>
</CustomField>