src/objects/Quote/fields/RFQ_Date__c.field-meta.xml
<CustomField>
    <fullName>RFQ_Date__c</fullName>
    <label>RFQ Date</label>
    <type>Date</type>
</CustomField>