src/objects/Quote/fields/S_D_End_Date__c.field-meta.xml
<CustomField>
    <fullName>S_D_End_Date__c</fullName>
    <label>S&amp;D End Date</label>
    <type>Date</type>
</CustomField>