src/objects/Quote/fields/S_D_End_Date_Reason__c.field-meta.xml
<CustomField>
    <fullName>S_D_End_Date_Reason__c</fullName>
    <label>S&amp;D End Date Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>