src/objects/Quote/fields/S_D_Extension_flag__c.field-meta.xml
<CustomField>
    <fullName>S_D_Extension_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>S&amp;D Extension flag</label>
    <type>Checkbox</type>
</CustomField>