src/objects/Quote/fields/Sales_Channel_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel_Account_Name__c</fullName>
    <formula>Sales_Channel__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Channel Account Name</label>
    <type>Text</type>
</CustomField>