src/objects/Quote/fields/Sales_Channel_DisplayCode__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel_DisplayCode__c</fullName>
    <formula>Sales_Channel__r.Sales_Channel_Display_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Channel Code</label>
    <type>Text</type>
</CustomField>