src/objects/Quote/fields/SalesChanelGroupName__c.field-meta.xml
<CustomField>
    <fullName>SalesChanelGroupName__c</fullName>
    <formula>Sales_Channel__r.Legacy_Id__c</formula>
    <label>SalesChanelGroupName</label>
    <type>Text</type>
</CustomField>