src/objects/Quote/fields/SalesChannel_Code__c.field-meta.xml
<CustomField>
    <fullName>SalesChannel_Code__c</fullName>
    <label>SalesChannel Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>