src/objects/Quote/fields/SD_Batch_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>SD_Batch_Last_Update__c</fullName>
    <label>SD Batch Last Update</label>
    <type>Date</type>
</CustomField>