src/objects/Quote/fields/Ship_Debit__c.field-meta.xml
<CustomField>
    <fullName>Ship_Debit__c</fullName>
    <externalId>true</externalId>
    <label>Ship &amp; Debit #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>