src/objects/Quote/fields/Status_editable_flag_for__c.field-meta.xml
<CustomField>
    <fullName>Status_editable_flag_for__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Status editable flag for</label>
    <type>Checkbox</type>
</CustomField>