src/objects/Quote/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <label>Template Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DEFAULT</fullName>
            </value>
            <value>
                <fullName>ITAR</fullName>
            </value>
            <value>
                <fullName>II-VI</fullName>
            </value>
            <value>
                <fullName>MIE</fullName>
            </value>
            <value>
                <fullName>MIE IN GERMAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>