src/objects/Quote/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <label>Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>