src/objects/Quote/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <description>Total price for transfer quote</description>
    <label>Total Price</label>
    <summarizedField>Quote_Item__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Quote_Item__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>