src/objects/Quote/fields/Type_of_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Pricing__c</fullName>
    <inlineHelpText>Blanket Price Agreement creates/updates customer price list. Dist Quote generates S&amp;D# for Distributor to ship standard parts to customer at lower price than current Disti Cost. Fixed-One Time Order does not update customer price list or generate S&amp;D#.</inlineHelpText>
    <label>Type of Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blanket Price Agreement</fullName>
            </value>
            <value>
                <fullName>Dist Quote</fullName>
            </value>
            <value>
                <fullName>Fixed - One Time Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>