src/objects/Quote/fields/Use_Alternate_Part_Descriptions__c.field-meta.xml
<CustomField>
    <fullName>Use_Alternate_Part_Descriptions__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if you want the Quote to use Alternate Part Descriptions instead of Part Descriptions.</inlineHelpText>
    <label>Use Alternate Part Descriptions</label>
    <type>Checkbox</type>
</CustomField>