src/objects/Quote/fields/Validity__c.field-meta.xml
<CustomField>
    <fullName>Validity__c</fullName>
    <label>Validity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>