src/objects/Quote/fields/VAR_SI__c.field-meta.xml
<CustomField>
    <fullName>VAR_SI__c</fullName>
    <label>VAR/SI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VAR_SI</valueSetName>
    </valueSet>
</CustomField>