src/objects/Quote/fields/VAR_SI_Disti_EC__c.field-meta.xml
<CustomField>
    <fullName>VAR_SI_Disti_EC__c</fullName>
    <label>VAR/SI Disti/EC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>