src/objects/Quote/recordTypes/Quote_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Quote_Record_Type</fullName>
    <active>true</active>
    <label>Normal Quote</label>
</RecordType>