src/objects/Quote/validationRules/BlanketPriceQuoteValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>BlanketPriceQuoteValidation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(Type_of_Pricing__c , &apos;Blanket Price Agreement&apos;), OR( Price_List__c = &apos;FNSR RSM PRICE LIST&apos;,Price_List__c = &apos;FNSR REP PRICE LIST&apos;) )</errorConditionFormula>
    <errorMessage>Select a valid customer-specific price list for Blanket Price Agreement Quote</errorMessage>
</ValidationRule>