src/objects/Quote/validationRules/DistiUserQuoteCreation.validationRule-meta.xml
<ValidationRule>
    <fullName>DistiUserQuoteCreation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISCHANGED( Type_of_Pricing__c ),   NOT(ISPICKVAL(Type_of_Pricing__c , &apos;Dist Quote&apos;)) ,  $Profile.Name = &apos;Finisar Partner Community User (Disti Users)&apos;)</errorConditionFormula>
    <errorMessage>Disti User can create only Disti quotes.</errorMessage>
</ValidationRule>