src/objects/Quote/validationRules/Pricing_End_Date_Greater_then_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Pricing_End_Date_Greater_then_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Pricing_Effective_Start_Date__c &gt; Pricing_Effective_End_Date__c</errorConditionFormula>
    <errorDisplayField>Pricing_Effective_End_Date__c</errorDisplayField>
    <errorMessage>Pricing end date should be greater then start date!</errorMessage>
</ValidationRule>