src/objects/Quote/validationRules/Pricing_Start_date_not_less_then_today.validationRule-meta.xml
<ValidationRule>
    <fullName>Pricing_Start_date_not_less_then_today</fullName>
    <active>true</active>
    <errorConditionFormula>TODAY()  &gt;  Pricing_Effective_Start_Date__c &amp;&amp; 
OR(
ISPICKVAL(Status,&apos;Draft&apos;),
ISPICKVAL(Status,&apos;&apos;)
)</errorConditionFormula>
    <errorDisplayField>Pricing_Effective_Start_Date__c</errorDisplayField>
    <errorMessage>Pricing start date can not be before then today!</errorMessage>
</ValidationRule>