src/objects/Quote/validationRules/quote_to_a_related_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>quote_to_a_related_Opportunity</fullName>
    <active>false</active>
    <description>User cannot create a quote without the Opportunity field actually being populated, if the legacy company field does not equal to Finisar</description>
    <errorConditionFormula>AND(TEXT( $User.Legacy_Company__c )!= &quot;Finisar&quot;, ISBLANK( OpportunityId),
NOT( $Permission.By_Pass_Validation )
)</errorConditionFormula>
    <errorMessage>You must attach this quote to a related Opportunity</errorMessage>
</ValidationRule>