src/objects/Quote/validationRules/Required_Fields_for_Finisar_Quotes.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Fields_for_Finisar_Quotes</fullName>
    <active>false</active>
    <description>&apos;Primary Sales Person&apos; &amp; &apos;Justification&apos; fields are required when the legacy company is finisar</description>
    <errorConditionFormula>AND(ISPICKVAL($User.Legacy_Company__c,&apos;Finisar&apos;),OR(ISBLANK(PrimarySalesperson__c),LEN (Justification__c)= 0))</errorConditionFormula>
    <errorMessage>Primary Sales Person and Justification are mandatory fields</errorMessage>
</ValidationRule>