src/objects/Quote/validationRules/WSSRSM_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>WSSRSM_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(CONTAINS(PrimarySalesperson__r.UserRole.Name , &apos;WSS&apos;)) &amp;&amp;  BusinessUnit__c = &apos;WSS&apos;</errorConditionFormula>
    <errorMessage>Primary Salesperson should be WSS user, otherwise you cannot add WSS items to the quote line.</errorMessage>
</ValidationRule>