src/objects/Quote/listViews/ALL_Quotes_Sorted_by_Amount.listView-meta.xml
<ListView>
    <fullName>ALL_Quotes_Sorted_by_Amount</fullName>
    <columns>Key_account__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Grand_Total__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Key_account__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>ALL Quotes Sorted by Amount</label>
</ListView>