src/objects/Quote/listViews/Blanket_Price_Agreement_Quotes.listView-meta.xml
<ListView>
    <fullName>Blanket_Price_Agreement_Quotes</fullName>
    <columns>QUOTE.QUOTENUMBER</columns>
    <columns>QUOTE.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.ISSYNCING</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>QUOTE.SUBTOTAL</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_of_Pricing__c</field>
        <operation>equals</operation>
        <value>Blanket Price Agreement</value>
    </filters>
    <label>Blanket Price Agreement Quotes</label>
</ListView>