src/objects/Quote/listViews/Fixed_One_Time_Order_Quotes.listView-meta.xml
<ListView>
    <fullName>Fixed_One_Time_Order_Quotes</fullName>
    <columns>QUOTE.QUOTENUMBER</columns>
    <columns>QUOTE.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.ISSYNCING</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>QUOTE.SUBTOTAL</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_of_Pricing__c</field>
        <operation>equals</operation>
        <value>Fixed - One Time Order</value>
    </filters>
    <label>Fixed One Time Order Quotes</label>
</ListView>