src/objects/Quote/listViews/mine.listView-meta.xml
<ListView>
    <fullName>mine</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>QUOTE.QUOTENUMBER</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.ISSYNCING</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>QUOTE.SUBTOTAL</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <columns>QUOTE.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QUOTE.STATUS</field>
        <operation>equals</operation>
        <value>Draft,Approval Pending</value>
    </filters>
    <label>My Quotes</label>
</ListView>